--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,18 @@
 <div class="container mt-4">
     <div class="row mb-4">
         <div class="col-md-8 offset-md-2">
-            <h2 class="text-center">Add New Book by ISBN</h2>
-            <form method="POST" action="{{ url_for('add_book') }}" class="input-group">
-                <input type="text" class="form-control" name="isbn" placeholder="Enter ISBN (e.g., 9781449372620)" required>
-                <button type="submit" class="btn btn-success">Add Book</button>
-            </form>
+          <h2 class="text-center">Add New Book</h2>
+<form method="POST" action="{{ url_for('search') }}">
+    <div class="input-group">
+        <input type="text" class="form-control" name="query" placeholder="Enter ISBN or Title" required>
+        <select name="search_type" class="form-select" style="max-width: 200px;">
+            <option value="isbn" selected>Search by ISBN</option>
+            <option value="title">Search by Title</option>
+        </select>
+        <button type="submit" class="btn btn-success">Search</button>
+    </div>
+</form>
+
         </div>
     </div>
 
