--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,13 @@
     <div class="input-group">
         <input type="text" class="form-control" name="query" placeholder="Enter ISBN or Title" required>
         <select name="search_type" class="form-select" style="max-width: 200px;">
-            <option value="isbn" selected>Search by ISBN</option>
+            <option value="isbn">Search by ISBN</option>
             <option value="title">Search by Title</option>
         </select>
         <button type="submit" class="btn btn-success">Search</button>
     </div>
 </form>
+
 
         </div>
     </div>
