--- a/templates/register.html
+++ b/templates/register.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Register</title>
 </head>
 <body>
     <h2>Register</h2>
     <form method="POST">
-        <label>Username:</label><br>
-        <input type="text" name="username" required><br><br>
+        {{ form.hidden_tag() }}
+        {{ form.username.label }}<br>
+        {{ form.username(size=32) }}<br><br>
         
-        <label>Password:</label><br>
-        <input type="password" name="password" required><br><br>
+        {{ form.password.label }}<br>
+        {{ form.password(size=32) }}<br><br>
 
-        <label>Confirm Password:</label><br>
-        <input type="password" name="confirm_password" required><br><br>
+        {{ form.confirm_password.label }}<br>
+        {{ form.confirm_password(size=32) }}<br><br>
 
-        <button type="submit">Register</button>
+        {{ form.submit() }}
     </form>
     <p>Already have an account? <a href="{{ url_for('login') }}">Login</a></p>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        <ul>
+        {% for category, message in messages %}
+          <li><strong>{{ category.capitalize() }}:</strong> {{ message }}</li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
 </body>
 </html>
